@@ -83,11 +83,14 @@ class tx_mnogosearch_tcemain {
 		// Only for LIVE records!
 		if ($pObj->BE_USER->workspace == 0) {
 			$this->storePageChanges($table, $id, $fieldArray, $pObj, false);
+			if ($table != 'pages') {
+				$this->storeRecordChanges($table, $id, $pObj);
+			}
 		}
 	}
 
 	/**
-	 * Processes record change
+	 * Processes page changes
 	 *
 	 * @param	string	$table	Table name
 	 * @param	mixed	$id	ID of the record (can be also 'NEW...')
@@ -128,7 +131,7 @@ class tx_mnogosearch_tcemain {
 			}
 		}
 		if ($pid) {
-			$this->processPid($pid, $pObj);
+			$this->processPid($pid);
 		}
 		if ($processClearCachePages) {
 			// Process any other page that may display results. This is important for
@@ -141,7 +144,7 @@ class tx_mnogosearch_tcemain {
 				$pidList = array_unique(t3lib_div::trimExplode(',', $TSConfig['clearCacheCmd'], true));
 				foreach($pidList as $pid) {
 					if (($pid = intval($pid))) {
-						$this->processPid($pid, $pObj);
+						$this->processPid($pid);
 					}
 				}
 			}
@@ -152,12 +155,12 @@ class tx_mnogosearch_tcemain {
 	 * Finds URL for page ID and inserts it to URL table.
 	 *
 	 * @param	int	$pid	Page ID
-	 * @param	object	$pObj	Reference to TCEmain
+	 * @return	void
 	 */
-	protected function processPid($pid, t3lib_TCEmain &$pObj) {
+	protected function processPid($pid) {
 		require_once(t3lib_extMgm::extPath('pagepath', 'class.tx_pagepath_api.php'));
 		$pagePath = tx_pagepath_api::getPagePath($pid);
-		if ($pagePath && !$this->pageAlreadyInLog($pagePath)) {
+		if ($pagePath && !$this->recordAlreadyInLog($pagePath)) {
 			// Check that page is not hidden and regular page
 			if ($this->canIndexPage($pid)) {
 				// Attempt to find page path
@@ -168,32 +171,24 @@ class tx_mnogosearch_tcemain {
 					t3lib_BEfunc::deleteClause('tx_mnogosearch_indexconfig')
 				);
 				if ($rows[0]['counter'] > 0) {
-						// Insert into log
-					$GLOBALS['TYPO3_DB']->exec_INSERTquery('tx_mnogosearch_urllog', array(
-								'pid' => 0,
-								'tstamp' => time(),
-								'crdate' => time(),
-								'cruser_id' => $pObj->userid,
-								'tx_mnogosearch_url' => $pagePath,
-								'tx_mnogosearch_pid' => $pid
-							)
-						);
+					// Insert into log
+					$this->addRecordToUrlLog($pagePath);
 				}
 			}
 		}
 	}
 
 	/**
-	 * Checks if page is already in log table.
+	 * Checks if record is already in the URL log table.
 	 *
-	 * @param	int	$pid Page UID
-	 * @return	boolean	<code>true</code> if page is in the table
+	 * @param	string	$recordPath Record path
+	 * @return	boolean	true if page is in the table
 	 */
-	protected function pageAlreadyInLog($pagePath) {
+	protected function recordAlreadyInLog($recordPath) {
 		list($rec) = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows('COUNT(*) AS t',
 			'tx_mnogosearch_urllog',
 			'tx_mnogosearch_url=' .
-				$GLOBALS['TYPO3_DB']->fullQuoteStr($pagePath, 'tx_mnogosearch_urllog'));
+				$GLOBALS['TYPO3_DB']->fullQuoteStr($recordPath, 'tx_mnogosearch_urllog'));
 		return ($rec['t'] > 0);
 	}
 
@@ -230,6 +225,83 @@ class tx_mnogosearch_tcemain {
 				t3lib_div::devLog($msg, 'mnogosearch', 0, $rec);
 			}
 		}
+	}
+
+	/**
+	 * Checks if given table is indexable and if yes stores its information
+	 * into the URL log
+	 *
+	 * @param	string	$table	Table name
+	 * @param	int	$id	Record id
+	 * @param	t3lib_TCEmain	Parent object
+	 * @return	void
+	 */
+	protected function storeRecordChanges($table, $id, t3lib_TCEmain &$pObj) {
+		$uid = (t3lib_div::testInt($id) ? $id : $pObj->substNEWwithIDs[$id]);
+		$record = t3lib_BEfunc::getRecordRaw($table, 'uid=' . intval($uid) .
+					$this->enableFields($table));
+		$configUid = 0;
+		if ($record && $this->isIndexable($table, $record, $configUid)) {
+			$path = sprintf('htdb:/%s/%d/%d', $table, $configUid, $record['uid']);
+			if (!$this->recordAlreadyInLog($path)) {
+				$this->addRecordToUrlLog($path, $record['pid']);
+			}
+		}
+	}
+
+	/**
+	 * Provides 'enableFields' clause and a workaround for bad SQL generated by
+	 * some versions of TYPO3.
+	 *
+	 * @param	string	$table	Table name
+	 * @return	string
+	 */
+	protected function enableFields($table) {
+		$enableFields = trim(t3lib_BEfunc::BEenableFields($table));
+		$deleteFields = trim(t3lib_BEfunc::deleteClause($table));
+		return ' ' . ($enableFields != 'AND' ? $enableFields : '') .
+				($deleteFields != 'AND' ? $deleteFields : '');
+	}
+
+	/**
+	 * Checks if record is indexed
+	 *
+	 * @param	string	$table	Table name
+	 * @param	array	$record	Record data from the database
+	 * @return	boolean	true if record is indexable
+	 */
+	protected function isIndexable($table, array $record, &$configUid) {
+		$indexingConfigs = t3lib_BEfunc::getRecordsByField('tx_mnogosearch_indexconfig',
+				'tx_mnogosearch_table', $table, '', '', 'sorting');
+		$result = false;
+		if (is_array($indexingConfigs)) {
+			foreach ($indexingConfigs as $config) {
+				$config['tx_mnogosearch_pid_only'] = trim($config['tx_mnogosearch_pid_only'], ', ');
+				if ($config['tx_mnogosearch_pid_only'] == '' ||
+						t3lib_div::inList($config['tx_mnogosearch_pid_only'], $record['pid'])) {
+					$result = true;
+					$configUid = $config['uid'];
+					break;
+				}
+			}
+		}
+		return $result;
+	}
+
+	/**
+	 * Adds record path to the urllog
+	 *
+	 * @param	string	$url	URl to add
+	 * @return	void
+	 */
+	protected function addRecordToUrlLog($url) {
+		$GLOBALS['TYPO3_DB']->exec_INSERTquery('tx_mnogosearch_urllog', array(
+					'pid' => 0,
+					'tstamp' => time(),
+					'crdate' => time(),
+					'tx_mnogosearch_url' => $url,
+				)
+			);
 	}
 }
 
