@@ -38,9 +38,8 @@
 			<label index="tx_mnogosearch_indexconfig.tx_mnogosearch_url_parameters">Single view URL parameters:</label>
 			<label index="tx_mnogosearch_indexconfig.tx_mnogosearch_display_pid">Page to display these records:</label>
 			<label index="tx_mnogosearch_indexconfig.tx_mnogosearch_pid_only">Limit to records at:</label>
-			<label index="tx_mnogosearch_urllog">Pages to index</label>
-			<label index="tx_mnogosearch_urllog.tx_mnogosearch_url">Page address:</label>
-			<label index="tx_mnogosearch_urllog.tx_mnogosearch_pid">Page:</label>
+			<label index="tx_mnogosearch_urllog">[mnoGoSearch] Modified records (for indexing)</label>
+			<label index="tx_mnogosearch_urllog.tx_mnogosearch_url">Address:</label>
 			<label index="ds_short_search_form">[mnoGoSearch] Short search form</label>
 			<label index="ds_long_search_form">[mnoGoSearch] Long search form</label>
 			<label index="ds_search_results">[mnoGoSearch] Search results</label>
