@@ -1,6 +1,7 @@
 31-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Make sure that functions are not defined more than once in tca.php
+	* Add record reindexing to CLI script and TCEmain hook
 
 29-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
